@@ -1,3 +1,9 @@
+2012-06-07  Frank Warmerdam  <warmerdam@google.com>
+
+	* libtiff/tif_print.c: avoid pretty printing other fields when
+	we don't have the proper amount and type of data or if the field
+	is actually autodefined.
+
 2012-06-05  Frank Warmerdam  <warmerdam@google.com>
 
 	* libtiff/tif_tile.c, libtiff/tif_strip.c: Ensure that illegal
